Fix mobile issues and code overflowing the layout.

--- a/themes/tufte/static/main.css
+++ b/themes/tufte/static/main.css
@@ -132,11 +132,6 @@
 }
 
 @media screen and (min-width: 53.75em) {
-    .hero .hero-inner .hero-copy h1 {
-        font-size: 1.9em
-    }
-}
-@media screen and (min-width: 53.75em) {
     .hero .hero-inner .hero-copy p {
         font-size: 1.3em
     }
@@ -205,6 +200,11 @@ subtitle aside {
 
 article ol, article ul {
   width: 55%;
+}
+
+article pre {
+  overflow-x: scroll;
+  width: 85%;
 }
 
 #footer {
